test/issues/issue13.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: issue13.prsl:5:14: error: at 'a': Attempt to access an undef variable

{ { a = 5; } a; }